fixed if user directly jump to verify page

--- a/webapp/styles/layout.scss
+++ b/webapp/styles/layout.scss
@@ -166,7 +166,7 @@ body,
 }
 
 .guest-card {
-  max-width: 500px;
+  max-width: 550px;
   border: 1px solid $gray-200;
   margin: 0 auto;
 }
